--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -198,8 +198,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "cabf942b-8459-4cae-9d0e-2e372f998f6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val = \"\"\"File: hello.py\\ndef hello():\\n    \\\"\\\"\\\"\\n    This function prints \\\"Hello World\\\" to the console.\\n\\n    Parameters: none\\n\\n    Returns: None\\n    \\\"\\\"\\\"\\n\\n    print(\\\"Hello World\\\")\\n    return None\\n\\nif __name__ == \\\"__main__\\\":\\n    hello()\\n\\nFile: hello2.py\\ndef hello2():\\n    \\\"\\\"\\\"\\n    This function prints \\\"Hello World\\\" to the console and then returns the same message.\\n\\n    Parameters: none\\n\\n    Returns: \\n        str: \\\"Hello World\\\"\\n    \\\"\\\"\\\"\\n    \\n    print(\\\"Hello World\\\")\\n    return \\\"Hello World\\\"\\n\\nif __name__ == \\\"__main__\\\":\\n    hello2()\\n\\nFile: hello3.py\\ndef hello3():\\n    \\\"\\\"\\\"\\n    This function returns \\\"Hello World\\\" without printing it to the console.\\n\\n    Parameters: none\\n\\n    Returns: \\n        str: \\\"Hello World\\\"\\n    \\\"\\\"\\\"\\n    \\n    return \\\"Hello World\\\"\\n\\n\\nif __name__ == \\\"__main__\\\":\\n    hello3()\\n\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "838f694f-51ef-411a-9e23-a116a4c17220",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File: hello.py\n",
+      "def hello():\n",
+      "    \"\"\"\n",
+      "    This function prints \"Hello World\" to the console.\n",
+      "\n",
+      "    Parameters: none\n",
+      "\n",
+      "    Returns: None\n",
+      "    \"\"\"\n",
+      "\n",
+      "    print(\"Hello World\")\n",
+      "    return None\n",
+      "\n",
+      "if __name__ == \"__main__\":\n",
+      "    hello()\n",
+      "\n",
+      "File: hello2.py\n",
+      "def hello2():\n",
+      "    \"\"\"\n",
+      "    This function prints \"Hello World\" to the console and then returns the same message.\n",
+      "\n",
+      "    Parameters: none\n",
+      "\n",
+      "    Returns: \n",
+      "        str: \"Hello World\"\n",
+      "    \"\"\"\n",
+      "    \n",
+      "    print(\"Hello World\")\n",
+      "    return \"Hello World\"\n",
+      "\n",
+      "if __name__ == \"__main__\":\n",
+      "    hello2()\n",
+      "\n",
+      "File: hello3.py\n",
+      "def hello3():\n",
+      "    \"\"\"\n",
+      "    This function returns \"Hello World\" without printing it to the console.\n",
+      "\n",
+      "    Parameters: none\n",
+      "\n",
+      "    Returns: \n",
+      "        str: \"Hello World\"\n",
+      "    \"\"\"\n",
+      "    \n",
+      "    return \"Hello World\"\n",
+      "\n",
+      "\n",
+      "if __name__ == \"__main__\":\n",
+      "    hello3()\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a46ebf7e-3b51-49f6-88d8-a22a89503147",
    "metadata": {},
    "outputs": [],
    "source": []
